# demo-document-qa

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  GUIDE.md  PROGRESS.md  README.md  alembic.ini  pyproject.toml
data/fixtures/: paper_qa_2410_05779v3.json  paper_qa_2410_05779v3_v2.json  qa_cases.json
deploy/: docker-compose.yml
deploy/backend/: Dockerfile
deploy/frontend/: Dockerfile
deploy/mineru/: README.md  docker-compose-mineru.yml  output-schema.md
deploy/postgres/: init.sql
deploy/vespa/: README.md
docs/: 01-mineru-setup.md  02-mineru-output-customizations.md  03-postgresql-schema.md  04-vespa-schema.md  05-agent-workflow.md  06-architecture.md  07-qa-pipeline.md  08-deep-qa.md
docs/dev/: DEVELOPMENT_PLAN.md  IMPROVEMENT_PLAN.md  PROGRESS.md
migrations/: env.py
migrations/versions/: 7f3a2b91c4d0_add_session_document_scope.py  b5b02bc9d209_initial_schema.py
scripts/: agent_trace_demo.py  deploy_vespa.py  figure_narration_smoke.py  ingest_sample_arxiv.py  mineru_poc.py  run_goal_score.py  run_parser_eval.py  run_qa_eval.py  run_retrieval_eval.py  smoke_agent_e2e.py
src/app/: __init__.py  config.py  db.py  errors.py  main.py  security.py
src/frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
tests/: _helpers.py  conftest.py
tests/e2e/: conftest.py  test_chat_isolation_e2e.py  test_session_isolation_e2e.py
tests/evaluation/: test_goal_score.py  test_paper_qa_20.py  test_paper_qa_20_v2.py  test_parser_eval.py  test_qa_eval.py  test_retrieval_eval.py
tests/fixtures/: enrichment_mock_responses.json
tests/integration/: test_agent_graph_e2e.py  test_agent_policies_in_graph.py  test_chats_api.py  test_documents_api.py  test_facts_api.py  test_ingestion_pipeline.py  test_isolation_api_scope.py  test_isolation_chat_documents.py  test_isolation_chat_sessions.py  test_isolation_cross_chat_document_sharing.py  test_isolation_session_history_service.py  test_manifest_api.py  test_messages_api.py  test_retrieval_isolation.py  test_sessions_api.py
tests/unit/: test_agent_budget.py  test_agent_graph.py  test_agent_policies.py  test_agent_state.py  test_agent_tools.py  test_agent_tools_isolation.py  test_chat_service.py  test_config.py  test_document_service.py  test_enrichment_document.py  test_enrichment_document_overview.py  test_enrichment_facts.py  test_enrichment_manifest.py  test_enrichment_section.py  test_extractive_provider.py  test_facts_service.py  test_ingestion_feed.py  test_isolation_service_filters.py  test_mineru_client.py  test_models.py  (+13 more)
(+173 files in other folders)
