[project]
name = "demo-document-qa"
version = "0.1.0"
description = "Paper Notebook Agent — multi-document Agentic QA over arXiv PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mineru[pipeline]>=3.3.1",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = ["ref", "data", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["ref/", "data/", "\\.venv/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
