[project]
name = "demo-document-qa"
version = "0.1.0"
description = "Paper Notebook Agent — multi-document Agentic QA over arXiv PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "mineru[pipeline]>=3.3.1",
    "openai>=2.41.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyvespa>=0.50",
    "six>=1.17.0",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest-httpx>=0.36.2",
    "aiosqlite>=0.22.1",
    "asgi-lifespan>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = ["ref", "data", ".venv", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["ref/", "data/", "\\.venv/"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
